# diesel

./: rust-analyzer.toml
diesel/: Cargo.toml
diesel/src/: backend.rs  data_types.rs  deserialize.rs  doctest_setup.rs  insertable.rs  lib.rs  r2d2.rs  result.rs  row.rs  test_helpers.rs
diesel/src/connection/: instrumentation.rs  mod.rs  transaction_manager.rs
diesel/src/connection/statement_cache/: mod.rs  strategy.rs
diesel/src/expression/: array_comparison.rs  cast.rs  helper_types.rs  mod.rs
diesel/src/expression/functions/: date_and_time.rs  helper_types.rs  mod.rs
diesel/src/expression_methods/: global_expression_methods.rs
diesel/src/internal/: derives.rs
diesel/src/macros/: mod.rs
diesel/src/mariadb/: backend.rs  mod.rs
diesel/src/mariadb/query_builder/: limit_offset.rs  mod.rs  query_fragment_impls.rs
diesel/src/migration/: mod.rs
diesel/src/mssql/: backend.rs  mod.rs  value.rs
diesel/src/mssql/connection/: error.rs  from_sql.rs  macros.rs  mod.rs  query.rs  result.rs  row.rs  sql_read_bytes.rs  tds.rs  to_sql.rs  transaction_manager.rs
diesel/src/mssql/connection/client/: auth.rs  config.rs  connection.rs  mod.rs  tls.rs  tls_stream.rs
diesel/src/mssql/connection/client/config/: ado_net.rs  jdbc.rs
diesel/src/mssql/connection/client/tls_stream/: native_tls_stream.rs  opentls_tls_stream.rs  rustls_tls_stream.rs
diesel/src/mssql/connection/tds/: codec.rs  collation.rs  context.rs  numeric.rs  stream.rs  time.rs  xml.rs
diesel/src/mssql/connection/tds/codec/: batch_request.rs  bulk_load.rs  column_data.rs  decode.rs  encode.rs  framed.rs  header.rs  iterator_ext.rs  login.rs  packet.rs  pre_login.rs  rpc_request.rs  sink.rs  token.rs  type_info.rs
diesel/src/mssql/connection/tds/codec/column_data/: binary.rs  bit.rs  bytes_mut_with_type_info.rs  date.rs  datetime2.rs  datetimen.rs  datetimeoffsetn.rs  fixed_len.rs  float.rs  guid.rs  image.rs  int.rs  money.rs  plp.rs  sql_variant.rs  string.rs  text.rs  time.rs  var_len.rs  xml.rs
diesel/src/mssql/connection/tds/codec/token/: token_col_metadata.rs  token_done.rs  token_env_change.rs  token_error.rs  token_feature_ext_ack.rs  token_info.rs  token_login_ack.rs  token_order.rs  token_return_value.rs  token_row.rs  token_sspi.rs
diesel/src/mssql/connection/tds/codec/token/token_row/: bytes_mut_with_data_columns.rs  into_row.rs
diesel/src/mssql/connection/tds/stream/: query.rs  token.rs
diesel/src/mssql/connection/tds/time/: chrono.rs  jiff.rs  time.rs
diesel/src/mssql/query_builder/: mod.rs  query_fragment_impls.rs
diesel/src/mysql/: backend.rs  mod.rs  value.rs
diesel/src/mysql/connection/: bind.rs  mod.rs  raw.rs
diesel/src/mysql/connection/stmt/: iterator.rs  metadata.rs  mod.rs
diesel/src/mysql/query_builder/: mod.rs  query_fragment_impls.rs
diesel/src/mysql/types/: json.rs  mod.rs  numeric.rs  primitives.rs
diesel/src/mysql/types/date_and_time/: chrono.rs  mod.rs  time.rs
diesel/src/pg/: backend.rs  metadata_lookup.rs  transaction.rs  value.rs
diesel/src/pg/connection/: copy.rs  cursor.rs  mod.rs  raw.rs  result.rs  row.rs
diesel/src/pg/connection/stmt/: mod.rs
diesel/src/pg/expression/: array.rs  array_comparison.rs  expression_methods.rs  helper_types.rs  mod.rs
diesel/src/pg/expression/extensions/: interval_dsl.rs
diesel/src/pg/query_builder/: mod.rs
diesel/src/pg/query_builder/copy/: copy_from.rs
diesel/src/pg/types/: array.rs  ipnet_address.rs  mac_addr.rs  mac_addr_8.rs  mod.rs  multirange.rs  network_address.rs  numeric.rs  ranges.rs  record.rs  uuid.rs
diesel/src/pg/types/date_and_time/: chrono.rs  quickcheck_impls.rs
diesel/src/pg/types/floats/: mod.rs  quickcheck_impls.rs
diesel/src/query_builder/: ast_pass.rs  bind_collector.rs  combination_clause.rs  distinct_clause.rs  limit_offset_clause.rs  mod.rs  query_id.rs  sql_query.rs  where_clause.rs
diesel/src/query_builder/insert_statement/: insert_with_default_for_sqlite.rs  mod.rs
diesel/src/query_builder/select_statement/: boxed.rs  mod.rs
diesel/src/query_builder/update_statement/: changeset.rs  mod.rs
diesel/src/query_dsl/: load_dsl.rs  mod.rs
diesel/src/query_source/: mod.rs  peano_numbers.rs
diesel/src/query_source/aliasing/: alias.rs  macros.rs  mod.rs
diesel/src/rsfb/: mod.rs
diesel/src/rsfb/fb/: backend.rs  connection.rs  query_builder.rs  transaction.rs  types.rs  value.rs
diesel/src/sql_types/: mod.rs  ord.rs
diesel/src/sqlite/: backend.rs
diesel/src/sqlite/connection/: bind_collector.rs  functions.rs  mod.rs  owned_row.rs  raw.rs  row.rs  serialized_database.rs  sqlite_value.rs  statement_iterator.rs  stmt.rs
diesel/src/sqlite/expression/: expression_methods.rs  functions.rs  mod.rs
diesel/src/sqlite/query_builder/: mod.rs
diesel/src/sqlite/types/: mod.rs
diesel/src/sqlite/types/date_and_time/: chrono.rs  mod.rs  time.rs
diesel/src/type_impls/: date_and_time.rs  decimal.rs  json.rs  mod.rs  primitives.rs  uuid.rs
diesel_cli/: Cargo.toml
diesel_cli/src/: config.rs  database.rs  errors.rs  main.rs  print_schema.rs
diesel_cli/src/infer_schema_internals/: foreign_keys.rs  inference.rs  information_schema.rs  mariadb.rs  mod.rs  mssql.rs  pg.rs  table_data.rs
diesel_cli/src/migrations/: diff_schema.rs
diesel_cli/tests/: database_url_errors.rs  migration_list.rs  print_schema.rs  setup.rs  tests.rs
diesel_cli/tests/support/: command.rs  mod.rs  (+3 more)
diesel_derives/: Cargo.toml
diesel_derives/src/: attrs.rs  lib.rs  model.rs  multiconnection.rs  query_id.rs  sql_function.rs  sql_type.rs  table.rs  util.rs
diesel_derives/tests/: as_changeset.rs  associations.rs  auto_type.rs  helpers.rs  identifiable.rs  queryable_by_name.rs  selectable.rs
diesel_dynamic_schema/: Cargo.toml
diesel_dynamic_schema/src/: dynamic_select.rs  dynamic_value.rs
diesel_migrations/: Cargo.toml
diesel_migrations/src/: embedded_migrations.rs  errors.rs  lib.rs
diesel_table_macro_syntax/src/: lib.rs
diesel_tests/tests/: annotations.rs  associations.rs  errors.rs  filter.rs  joins.rs  perf_details.rs  schema_inference.rs  types.rs  types_roundtrip.rs
(+11 files in other folders)
